@@ -6,7 +6,7 @@
 # if defined WIN32 || defined LIBPORT_WIN32
 
 /* WinSock.h is incompatible with WinSock2.h (and Windows.h includes
- * WinSock.h). This isn't caught by Windows' headers, so it's caught here.
+ * WinSock.h).  This isn't caught by Windows' headers, so it's caught here.
  */
 # ifdef _WINSOCKAPI_
 #  error You included WinSock.h (or Windows.h) before this header.
@@ -16,7 +16,11 @@
 #  include <WinSock2.h>
 #  undef GROUP
 
-typedef int socklen_t;
+typedef UINT32 socklen_t;
+/* In reality, the MS API says this is a `u_long' although it does not define
+ * this type.  See: http://msdn2.microsoft.com/en-us/library/ms738571.aspx
+ */
+typedef UINT32 in_addr_t;
 
 // http://msdn2.microsoft.com/en-us/library/ms740481.aspx
 #  define SHUT_RDWR SD_BOTH
@@ -24,11 +28,11 @@ typedef int socklen_t;
 #  define SHUT_WR SD_SEND
 
 /* The 4th argument is usually a const void* on UNIX and a const char* on
- * Windows. */
+ * Windows.  */
 #  define setsockopt(Fd, Lvl, Optname, Optval, Optlen) \
 	  setsockopt((Fd), (Lvl), (Optname), (const char*) (Optval), (Optlen))
 
-# else /* !WIN32: Assume UNIX-style headers for networking. */
+# else /* !WIN32: Assume UNIX-style headers for networking.  */
 
 #  include <sys/types.h>
 #  include <sys/socket.h>
