@@ -38,6 +38,15 @@
 #  define usleep(a) Sleep((a) < 1000 ? 1 : (a) / 1000)
 #  define sleep(a) Sleep((a) * 1000)
 
+typedef UINT8 uint8_t;
+typedef INT8 int8_t;
+typedef UINT16 uint16_t;
+typedef INT16 int16_t;
+typedef UINT32 uint32_t;
+typedef INT32 int32_t;
+typedef UINT64 uint64_t;
+typedef INT64 int64_t;
+
 # endif // !WIN32
 
 #endif // !LIBPORT_WINDOWS_HH
